--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: default
                 {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}" target="_new"><i class="fa fa-github fa-2x"></i></a>{% endif %}
                 {% if site.linkedin_link %}<a href="{{ site.linkedin_link }}" target="_new"><i class="fa fa-linkedin fa-2x"></i></a>{% endif %}
                 {% if site.twitter_username %}<a href="http://www.twitter.com/{{ site.twitter_username }}" target="_new"><i class="fa fa-twitter fa-2x"></i></a>{% endif %}
+                <a href="mailto:zujko@csh.rit.edu"><i class ="fa fa-envelope-o fa-2x"></i></a>
                 <a href="http://www.csh.rit.edu/~zujko/resume.pdf" target="_new"><i class="fa fa-file-text-o fa-2x"></i></a>
             </div>
           </div>
